[package]
name = "thermosmart"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.6"
reqwest = { version = "0.12", default-features = false }
serde = { version = "1.0", default-features = false, features = ["derive"] }
serde-xml-rs = "0.6"
thiserror = "1.0"
url = "2.5"

[dev-dependencies]
clap = { version = "4.5.4", features = ["derive"] }
tokio = { version = "1.37.0", default-features = false, features = ["macros", "rt"] }

[profile.release]
codegen-units = 1
lto = "fat"
panic = "abort"
strip = true
